--- a/top.html
+++ b/top.html
@@ -51,12 +51,42 @@
         <h3 class="firstmessage">なぞるな、描け。</h3>
       </div>
       <div class="profileField">
-        <div class="aboutCreator">
+        <div class="aboutCreator container.fluid">
           <div class="creatorTitle">
-            <h1>CREATOR'S PROFILE</h1>
+            <h1>ABOUT CREATOR</h1>
           </div>
-          <div class="creatorContents">
-
+          <div class="creatorContents row">
+            <div class="creatorTexts col-lg-6 col-12 order-2 .order-lg-1">
+              <div class="creatorIndex">
+                <h1>PROFILE</h1>
+              </div>
+              <div class="creatorMessages">
+                <p class="creatorName">コバケン</p>
+                <br>
+                <p>1990年6月6日生まれ</p>
+                <p>大学卒業後、シンガーソングライターとして活動。</p>
+                <p>24歳で就職支援のエージェント会社に就職し5年間勤務。</p>
+                <p>30歳で独立、現在は作詞作曲や映像の仕事をしている。</p>
+                <a href="http://kobakenpiano.com/movie/" class="produces" target="_blank" rel="noopener noreferrer" >
+                  過去の主な作品
+                </a>
+                <br>
+                <br>
+                <a href="https://www.youtube.com/channel/UCj4MBGawLjazIJm9rvHVHgg/" class="produces" target="_blank" rel="noopener noreferrer" >
+                  音楽ユニット「massugu」
+                </a>
+                <div class="aboutThirty">
+                  <a href="https://youtu.be/JP2mq1UwNlg" class="trailer" target="_blank" rel="noopener noreferrer" >
+                    What's 30 × 30 ?
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="creatorImages col-lg-6 col-12 order-1 order-lg-2">
+              <div class="creatorPhoto">
+                <img src= "kobaken.png" alt="no image" class="contentsImage">
+              </div>
+            </div>
           </div>
         </div>
       </div>
